@@ -1,5 +1,10 @@
 2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Partition.h: added FIXME
+	* src/Partition.cc: fixed Update_Number()
+
+2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Dialog_Progress.h,
 	  src/Dialog_Progress.cc,
 	  src/Win_GParted.cc: made some changes to progressdialog behaviour.
